Fixing z-index

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -73,7 +73,7 @@
 
   button {
     position: absolute;
-    z-index: 5;
+    z-index: 2;
     top: 8px;
     right: 8px;
   }
